# QuickConfiguration2

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  BUILD.md  CHANGELOG.md  LICENSE  README.md  dnd-window.html  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  dndWindow.json
src-tauri/icons/: icon.icns
src-tauri/resources/IniFiles/: Fallout76.ini  Fallout76Prefs.ini
src-tauri/src/: info.rs  main.rs
src-tauri/src/commands/: archive2.rs  download.rs  errors.rs  game.rs  ini.rs  mod.rs  nxm.rs  open.rs  paths.rs  profiles.rs  screenshots.rs  settings.rs  translations.rs
src-tauri/src/commands/mods/: deployment.rs  events.rs  installation.rs  installation_fixes.rs  legacy.rs  management.rs  metadata.rs  mod.rs  models.rs  utils.rs
src-tauri/src/commands/nexusmods/: api.rs  data.rs  mod.rs  sso.rs
src-tauri/src/commands/resourcelists/: mod.rs
src-tauri/src/features/: args.rs  mod.rs
src-tauri/src/features/archive2/: mod.rs  models.rs  read.rs  tests.rs
src-tauri/src/features/game/: launch.rs  mod.rs  screenshots.rs  tests.rs
src-tauri/src/features/game/paths/: game_config.rs  game_installation.rs  mod.rs
src-tauri/src/features/github/: mod.rs  models.rs  tests.rs
src-tauri/src/features/linkhandler/: error.rs  mod.rs
src-tauri/src/features/mods/: errors.rs  mod.rs
src-tauri/src/features/mods/deployment/: mod.rs  models.rs  tests.rs
src-tauri/src/features/mods/installation/: fixes.rs  mod.rs  models.rs  tests.rs
src-tauri/src/features/nexusmods/: mod.rs  nxm.rs  tests.rs
src-tauri/src/features/resourcelists/: mod.rs  models.rs  tests.rs
src-tauri/src/features/screenshots/: mod.rs  tests.rs  thumbnails.rs
src-tauri/src/features/sevenzip/: mod.rs  tests.rs
src-tauri/src/features/steam/: mod.rs  paths.rs  screenshots.rs  tests.rs
src-tauri/src/features/stores/: mod.rs
src-tauri/src/features/translations/: download.rs  errors.rs  mod.rs  models.rs
src-tauri/src/features/wine/: mod.rs  tests.rs
src-tauri/src/utils/: bindings.rs  channel.rs  mod.rs  open.rs  paths.rs  serde_xml.rs  test_utils.rs
src-tauri/src/utils/download/: mod.rs  tests.rs
src-tauri/src/utils/fs_util/: mod.rs  tests.rs
src-tauri/src/utils/ini/: mod.rs  tests.rs
src-tauri/src/utils/macros/: mod.rs  osstring_concat.rs
src-tauri/src/utils/windows/: drives.rs  mod.rs  string_conv.rs
src-tauri/tests/fixtures/: README.md  dds_default.ba2  dds_default_textures.ba2  general_default.ba2  general_none.ba2
src-tauri/windows/: hooks.nsh
(+389 files in other folders)
